--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ pytest-metadata==3.1.1
 pytest-ordering==0.6
 pytest-rerunfailures==14.0
 pytest-xdist==3.6.1
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.1
@@ -57,6 +58,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 tabcompleter==1.3.0
+tqdm==4.66.4
 trio==0.25.1
 trio-websocket==0.11.1
 typing_extensions==4.12.2
